[tool.poetry]
name = "odp-data-backups"
version = "0.1.0"
description = ""
authors = ["Stephen Suffian <stephen.suffian@pm.me>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.10.4"
click = "^8.1.7"
pandas = "^2.1.1"
requests = "^2.31.0"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
