[project]
name = "wop-odp-backups"
version = "0.2.0"
description = "Who Owns Philly — monthly SQLite database of OpenDataPhilly datasets."
requires-python = ">=3.10.4"
dependencies = [
    "open-data-philly-downloader>=0.1,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
